# hh_job_tracker

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
app/: config.py  events.py  notify.py  scheduler.py  tasks.py  timeutil.py
app/clients/: cbr.py  cookies.py  headers.py  hh.py  rate_limit.py
app/collector/: favorites.py  personal.py  vacancies.py
app/db/: db.py  embeddings_repo.py  employers_repo.py  funnel_repo.py  job_runs_repo.py  llm_repo.py  logs_repo.py  negotiations_repo.py  profile_repo.py  schema.sql  searches_repo.py  vacancies_repo.py
app/llm/: client.py  prompts.py  rag.py  registry.py  settings.py
app/llm/tasks/: requirements.py
app/parsers/: level.py  remote.py  salary.py  stack.py  state.py
app/scoring/: match.py  ml.py  predict.py
app/web/: app.py
app/web/templates/: _row.html  _table.html  analytics.html  base.html  compare.html  funnel.html  index.html  jobs.html  llm_logs.html  logs.html  profile.html  search.html  searches.html  vacancy.html
docs/: antibot.md  architecture.md  rag.md  scraping.md  testing.md  troubleshooting.md
docs/site/: analytics.html  compare.html  funnel.html  index.html  jobs.html  llm_logs.html  logs.html  profile.html  search.html  searches.html
docs/site/vacancy/: 90000001.html  90000002.html  90000003.html  90000004.html  90000005.html  90000006.html  90000007.html  90000008.html  90000009.html  90000010.html  90000011.html  (+9 more)
scripts/: export_dataset.py  export_static.py  llm_parse.py  migrate_embed_dim.py  seed_demo.py
scripts/hooks/: pre-commit
tests/: conftest.py
tests/e2e/: conftest.py  test_analytics.py  test_api.py  test_api_extra.py  test_jobs_page.py  test_llm_endpoints.py  test_rag.py  test_recommendations_and_stream.py  test_searches.py
tests/integration/: test_cbr.py  test_collector_favorites.py  test_collector_personal.py  test_collector_vacancies.py  test_cookies.py  test_dedup.py  test_embeddings_repo.py  test_employers_repo.py  test_funnel_repo.py  test_job_runs_repo.py  test_llm_registry.py  test_llm_repo.py  test_llm_requirements.py  test_llm_settings.py  test_logs_repo.py  test_negotiations_repo.py  test_profile_repo.py  test_resume_token.py  test_searches_repo.py  test_vacancies_repo.py  test_vacancies_repo_extra.py
tests/unit/: test_detect_archived.py  test_events.py  test_headers.py  test_hh_client.py  test_llm_client.py  test_notify.py  test_parsers_cookies.py  test_parsers_level.py  test_parsers_remote.py  test_parsers_salary.py  test_parsers_stack.py  test_parsers_state.py  test_rag.py  test_rate_limit.py  test_scheduler.py  test_scheduler_jobs.py  test_scoring_match.py  test_scoring_ml.py  test_scoring_predict.py  test_soft_score.py  test_tasks.py  test_timeutil.py
(+2 files in other folders)
