[project]
name = "hh-job-tracker"
version = "0.1.0"
description = "Personal HH.ru job tracker with stealth scraping"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx[http2]>=0.27",
    "jinja2>=3.1",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.5",
    "apscheduler>=3.10",
    "joblib>=1.4",
    "sqlalchemy>=2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
